<resources>
    <string name="app_name">Survey+</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_an_account">Create an account</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="login_here">Login Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="easy">Easy</string>
    <string name="easy_to_fill_survey">Easy To Fill Survey</string>
    <string name="easy_to_manage">Easy To Manage</string>
    <string name="easy_to_manage_survey">Easy to manage Survey</string>
    <string name="user_friendly">User Friendly</string>
    <string name="the_survey_app">Survey+</string>
    <string name="add_forms">Add Forms</string>
    <string name="sign_out">Sign out</string>
    <string name="get_started">Get Started</string>
    <string name="enter_survey_name">Enter Survey Name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="add_survey">Add Survey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="question">Question:</string>
    <string name="successfully_Login">Successfully Login</string>
    <string name="email_password_incorrect">Your Email or Password is incorrect</string>
    <string name="registartion_failed">Failed to Register User</string>
    <string name="successfully_saved_data">"Successfully Saved Data "</string>
    <string name="error_firestore">FireStore Error</string>
    <string name="log_out">Successfully Log out</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="username_required">Username is required</string>
    <string name="total_questions">Total Questions:</string>
    <string name="or">or</string>
    <string name="empty_data">Empty Selected Answer</string>
    <string name="answer_updated">Form with answers updated successfully</string>
    <style name="surveyApp_logo">Survey+ Logo</style>
    <string name="completed">You have Already Submitted this form.</string>
    <string name="not_completed_form">Please Filled all questions\'s answers</string>
    <string name="user_data_saved">User data saved successfully</string>
</resources>